[gd_scene load_steps=7 format=3 uid="uid://bfhi5kh8a0s1s"]

[ext_resource type="Script" uid="uid://b5wj5fcup6p8b" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://djxvmgfurl5mh" path="res://fonts/Magnetar.otf" id="2_640wx"]
[ext_resource type="Texture2D" uid="uid://7kcy5mt8owk6" path="res://art/Title.png" id="3_8sq4i"]
[ext_resource type="AudioStream" uid="uid://csk7eby6pgjuk" path="res://art/undertale-select-sound.mp3" id="4_640wx"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_top = 50.0
offset_right = 22.5
offset_bottom = 128.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("2_640wx")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Message" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("2_640wx")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -159.285
offset_top = -150.0
offset_right = 159.285
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("2_640wx")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8sq4i")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Icon" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -185.0
offset_right = 276.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_8sq4i")

[node name="WarningLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -452.0
offset_top = -265.0
offset_right = 452.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.864583, 0.594401, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_640wx")
theme_override_font_sizes/font_size = 27
text = "Hello There"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Instructions" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -398.0
offset_top = 26.0
offset_right = 399.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 23
theme_override_fonts/font = ExtResource("2_640wx")
theme_override_font_sizes/font_size = 21
text = "Dodge as many pieces of space junk as you can. if you find yourself in a pinch: spacebar unleashes a seismic charge, at the cost of 3 of your points..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SelectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_640wx")

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
